Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/unicode/Unmappable.out
Unmappable.java:12:18: compiler.err.illegal.char.for.encoding: E4, ascii
1 error
